@@ -15,6 +15,9 @@ Core and Builtins
 - Issue #8837: Remove "O?" format of PyArg_Parse*() functions. The format is no
   used anymore and it was never documented.
 
+- In the str.format(), raise a ValueError when either indexes to arguments are
+  too large.
+
 - Issue #2844: Make int('42', n) consistently raise ValueError for
   invalid integers n (including n = -909).
 
